# AGV_auto_docking

./: LICENSE  README.md
auto_dock/: CMakeLists.txt  rviz.rviz
auto_dock/config/: base_local_planner_params.yaml  costmap_common_params.yaml
auto_dock/launch/: auto_dock.launch  auto_dock_PIDcontrol.launch  auto_dock_control.launch  auto_dock_movebase_control.launch  find_pattern.launch  four_macnum_findpattern.launch  four_macnum_simulation.launch  move_base.launch
auto_dock/launch/include/: move_base.xml
auto_dock/src/: PID_controller.cpp  comm.h  controller.cpp  pattern.cpp  sendgoal.cpp
four_macnum_bringup/: rviz.rviz
four_macnum_description/urdf/: four_macnum.gazebo.xacro  four_macnum.urdf.xacro  nexus_4wd_mecanum.gazebo  nexus_4wd_mecanum.xacro
four_macnum_simulation/launch/: four_macnum_simulation.launch  nexus_4wd_macnum_simulation.launch
four_macnum_simulation/world/: factory.world  pattern.world  pattern1.world  pattern2.world  pattern3.world  pattern4.world  pattern5.world  pattern6.world  pattern7.world  pattern8.world
four_macnum_slam/launch/: four_macnum_mapping.launch  gmapping.launch  nexus_4wd_macnum_mapping.launch
param/: CMakeLists.txt  package.xml  param_list.yaml
scan_tools/laser_scan_matcher/: package.xml
scan_tools/laser_scan_matcher/src/: laser_scan_matcher.cpp  laser_scan_matcher_node.cpp
